[Varun] ADD: user profile picture
